# nitfol

./: Make.dummy  Makefile  automap.c  automap.h  inform.c  inform.y  init.c  io.c  main.c  meson.build  meson_options.txt  nitfol.h  startunix.c  z_io.c  zscii.c
